--- a/src/InOut.css
+++ b/src/InOut.css
@@ -4,14 +4,36 @@
 
 .element_periodo {
     display: flex;
+    height: 32px;
     justify-content: center;
     flex-basis: 5%;
+}
+
+label{
+    font-weight: bold;
 }
 
 #n_periodos{
     width: 18%;
     text-align: center;
     margin-left: 5%;
+    font-weight: 400;
+    font-size: 1em;
+    border-radius: 2px;
+    background-color: #3b3b3b;
+    border: 1px solid #858585;
+    color: #FFFFFF;
+}
+
+#validation{
+    color: #FF0000;
+    font-size: 1em;
+    margin: 0;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  appearance: none;
 }
 
 .matrix{
@@ -27,7 +49,17 @@
 }
 
 .addcontainer{
-    text-align: start;
+    display: flex;
+    justify-content: space-between;
+}
+
+#deltbutton{
+    background: #9f1212;
+}
+
+#deltbutton:hover{
+    border-color: #eb4242;
+    border-width: 3px;
 }
 
 .inputcontainer{
@@ -35,6 +67,7 @@
 }
 
 .valores{
+    
     height: 100%;
     background-color: transparent;
     border: none;
@@ -42,6 +75,12 @@
     margin: 0;
     text-align: center;
     top: 10px;
+    font-size: 1em;
+    color: #FFFFFF;
+}
+
+.layers{
+    font-weight: bold;
     font-size: 1em;
 }
 
