--- a/src/InOut.css
+++ b/src/InOut.css
@@ -82,6 +82,7 @@ input::-webkit-inner-spin-button {
 .valores{
     
     height: 100%;
+    width: 100%;
     background-color: transparent;
     border: none;
     padding: 0px;
@@ -99,4 +100,26 @@ input::-webkit-inner-spin-button {
 
 .valores:focus{
     outline: none;
+}
+
+#grafica1{
+    margin: 5vh 0 0 0;
+    width: 100%;
+    height: 10%;
+    display: grid;
+    background-color: #FFFFFF;
+    grid-template-rows: 1fr;
+    grid-auto-columns: 1fr;
+    grid-auto-flow: column;
+    
+}
+
+#grafica1 div{
+    display: flex;
+    border: 2px solid #000000;
+    color: #000000;
+    font-size: 1em;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
 }
