--- a/src/InOut.css
+++ b/src/InOut.css
@@ -51,7 +51,7 @@ input::-webkit-inner-spin-button {
     margin: 10vh 0 5vh 0;
     width: 80%;
     display: grid;
-    grid-template-columns: .5fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap:2px;
 }
 
@@ -102,10 +102,10 @@ input::-webkit-inner-spin-button {
     outline: none;
 }
 
-#grafica1{
+.grafica1{
     margin: 5vh 0 0 0;
     width: 100%;
-    height: 10%;
+    height: 5%;
     display: grid;
     background-color: #FFFFFF;
     grid-template-rows: 1fr;
@@ -114,12 +114,75 @@ input::-webkit-inner-spin-button {
     
 }
 
-#grafica1 div{
+.grafica1 div{
     display: flex;
     border: 2px solid #000000;
     color: #000000;
     font-size: 1em;
-    align-items: center;
-    justify-content: center;
+
     font-weight: bold;
+    
+}
+
+.grafica1 div input{
+
+    text-align: center;
+    width: 100%;
+    background-color: transparent;
+    color: #000000;
+    border: none;
+    font-size: 1em;
+    font-weight: bold;
+    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+.grafica1 div input:focus {
+    outline: none;
+}
+
+.flechav{
+    margin: 0;
+    height: 10%;
+    font-weight: 100;
+}
+
+.flechav div{
+    color: #079e07;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.flechav div i{
+    height: fit-content;
+    transform: scale(1,2);
+    margin: 0;
+}
+
+.recta-container{
+    margin-top: 5px;
+    display: flex;
+    justify-content: center;
+    background: transparent;
+    height: 5%;
+    width: 100%;
+}
+
+.recta{
+    width: 80%;
+    background: #FFFFFF;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: 1fr 1fr;
+    grid-auto-columns: 1fr;
+}
+
+.recta-item{
+    border: 3px solid #FF00FF;
+    border-top: 0;
+    border-left: 0;
+}
+
+.ridofborders{
+    border-left:3;
 }
